# First-Compiler

./: .Makefile.swp  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  IDEAS.txt  Makefile  README.md  STATUS.md  a.out  file2.h  main.s  points.md  project v1.0.md  report.md  roadmap.md  test.c  test.txt
examples/: donut.mpl  echo.mpl  funcptr.mpl  hello.mpl  list.mpl  runtime_error.mpl  structs.mpl
generator-mpl/: package-lock.json  package.json
generator-mpl/generators/app/: index.js
generator-mpl/generators/app/templates/: Makefile  README.md  gitignore  main.mpl
inc/: Ast.hpp  AstAnalyser.hpp  AstInter.hpp  AstPrinter.hpp  AstVisitor.hpp  CodeGenerator.hpp  Input.hpp  Lexer.hpp  Logger.hpp  Parser.hpp  Preprocessor.hpp  SourceMap.hpp  Token.hpp  TokenKind.hpp  Types.hpp
inc/backend/: CodeGenerator.hpp
inc/core/: Ast.hpp  SourceMap.hpp  Token.hpp  Types.hpp
inc/frontend/: Input.hpp  Lexer.hpp  Parser.hpp  Preprocessor.hpp
inc/sema/: AstAnalyser.hpp
inc/support/: AstPrinter.hpp  Logger.hpp
mpl-vscode/: README.md  language-configuration.json  package.json
mpl-vscode/syntaxes/: mpl.tmLanguage.json
specs/: codegen.md  grammar.md  semantics.md  types.md
src/: AstAccept.cpp  AstAnalyser.cpp  AstInter.cpp  AstPrinter.cpp  CodeGenerator.cpp  Input.cpp  Lexer.cpp  Parser.cpp  comp.cpp
src/backend/: CodeGenerator.cpp
src/core/: AstAccept.cpp
src/frontend/: Input.cpp  Lexer.cpp  Parser.cpp
src/sema/: AstAnalyser.cpp
src/support/: AstPrinter.cpp
tests/: README.md  bitwise_shifts.mpl  deep_nesting.mpl  deep_recursion.mpl  float_special.mpl  int_float_mix.mpl  many_args.mpl  many_locals.mpl  pointers_arrays.mpl  register_pressure_gp.mpl  register_pressure_sse.mpl  run.sh
tests/points/: A_1_13_metafunctions.mpl  A_1_1_sized_types.mpl  A_1_6_nullable.mpl  A_1_8_implicit_conversions.mpl  A_1_9_operators.mpl  A_2_18_pointers.mpl  A_2_8_overloads.mpl  A_3_16_ffi.mpl  A_3_9_raw_pointers.mpl
tmp/: AstAccept.d  AstInter.d  AstPrinter.d  Input.d  Lexer.d  Parser.d  comp.d
